# age_prediction

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  main.py  package-lock.json  pyproject.toml
.github/workflows/: main.yml
api/: main.py
data_analyse/: data_exploration.ipynb
frontend/: dockerfile  package-lock.json
frontend/src/: App.jsx
src/: data_loader.py  inference.py  model.py  test.py  train.py  train_optuna.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_model.py
