[project]
name = "age-prediction"
version = "0.1.0"
description = "Estimation d'âge avec ResNet50 et PyTorch"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = false

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }